--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,5 @@
-<h1>Welcome to my app!</h1>
-<p>sign up <%= link_to "here", "#"%></p>
+<div class="jumbotron">
+	<h1>Welcome to my app!</h1>
+	Click here <%= link_to "sign up", "#", class: "btn btn-primary" %>
+</div>
 
