--- a/app/assets/stylesheets/bootstrap_and_customisation.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customisation.css.scss
@@ -1,1 +1,7 @@
+$body-bg: #2c3e50;
+$navbar-inverse-bg: #1abc9c; 
+$navbar-inverse-link-color: white;
+$brand-primary: #f39c12;
+$jumbotron-bg: #bdc3c7;
+@import 'bootstrap-sprockets';
 @import 'bootstrap';
