--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,10 +8,9 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-	<%= link_to "Home", root_path%>
-	<%= link_to "About us", about_path%>
+	<%= render 'layouts/header' %>
  	<div class="container">
-<%= yield %>
-
+		<%= yield %>
+    </div>
 </body>
 </html>
