--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="jumbotron">
 	<h1>Welcome to my app!</h1>
-	Click here <%= link_to "sign up", "#", class: "btn btn-primary" %>
+	Click here to<%= link_to "sign up", "#", class: "btn btn-primary" %>
 </div>
 
