--- a/app/assets/stylesheets/bootstrap_and_customisation.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customisation.css.scss
@@ -1,7 +1,7 @@
-$body-bg: #2c3e50;
-$navbar-inverse-bg: #1abc9c; 
-$navbar-inverse-link-color: white;
+$body-bg: #2980b9;
+$navbar-inverse-bg: #16a085; 
+$navbar-inverse-link-color: green;
 $brand-primary: #f39c12;
-$jumbotron-bg: #bdc3c7;
+$jumbotron-bg: #2980b9;
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
