--- a/app/assets/stylesheets/bootstrap_and_customisation.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customisation.css.scss
@@ -1,7 +1,17 @@
+@import url(http://fonts.googleapis.com/css?family=Lato:400,700);
+
 $body-bg: #2980b9;
 $navbar-inverse-bg: #16a085; 
 $navbar-inverse-link-color: green;
 $brand-primary: #f39c12;
-$jumbotron-bg: #2980b9;
+$jumbotron-bg: #bdc3c7;
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
+
+.center {
+	text-align: center;
+}
+
+.navbar-brand {
+	font-weight: bold;
+}
