--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -28,6 +28,8 @@
             <% else %>
             <li><%= link_to "Sign in", new_user_session_path %></li>
             <% end %>
+            <li><%= link_to "Account settings", edit_user_registration_path %></li>
+            <% end %>
           </ul>
         </li>
       </ul>
