--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -27,8 +27,7 @@
             <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
             <% else %>
             <li><%= link_to "Sign in", new_user_session_path %></li>
-            <% end %>
-            <li><%= link_to "Account settings", edit_user_registration_path %></li>
+            <li><%= link_to "Account Settings", edit_user_registration_path %></li>
             <% end %>
           </ul>
         </li>
